# CloudFinalProject

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  frontend_integration_steps.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: update_readme.yml
data/: .gitignore  README.md  new49.csv
data/labels/: video_markdown_data.csv
docs/: uv_guide.md
pose_backend/: .dockerignore  .gitignore  Dockerfile  README.MD  app.py  deadlift_rf_model.pkl  label_binarizer.pkl  main.py  pyproject.toml  requirements.txt
presentation/Final-demo/: FinalForm.docx
presentation/MVP-demo/: AI Deadlift Coach Final Presentation.pptx
python/: pyproject.toml
tools/: update_readme.py
ui/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  DeadliftCoach.css  DeadliftCoachApp.jsx  LandingPage.css  LandingPage.jsx  SquatCoach.css  SquatCoachApp.jsx  main.jsx
ui/src/logic/: mockPoseLogic.js  poseBridge.js
ui/tests/: no_video_inputs.json  test_no_video_inputs.js
video_analysis/: README.MD  api_server.py  deadlift_rf_model.pkl  predict_youtube.py  train_local.py
