[project]
name = "cloudfinalproject"
version = "0.1.0"
description = "AI Deadlift Coach - 智慧硬舉姿勢分析系統"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core ML & Data Processing
    "numpy>=1.26.0,<2.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    
    # Computer Vision
    "opencv-python>=4.9.0",
    "mediapipe==0.10.14",
    "pillow>=12.0.0",
    
    # API Server
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.0",
    
    # Visualization (for training)
    "matplotlib>=3.8.0",
    
    # YouTube Download (for data collection)
    "yt-dlp>=2025.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
